[workspace]
members = [
    "libraries/*",
    "utilities/*",
    # "infra/spawn-network"
]

[workspace.package]
version = "0.5.11"
edition = "2024"
repository = "https://github.com/mel-project/earendil"
license = "MPL-2.0"

[package]
name = "earendil"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

description = "A decentralized, ban-resistant mixnet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nanorpc-http = { path="../nanorpc-http" }
#melprot = "0.13.9"
#melstructs = "0.3.3"
ahash = "0.8.11"
anyctx = "0.1"
anyhow = "1.0.75"
async-dup = "1.2.4"
async-event = "0.1.0"
async-recursion = "1.0.5"
async-trait = "0.1.80"
base64 = "0.21.5"
bip39 = "2.0.0"
blake3 = "1.5.0"
bytemuck = "1.14.0"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
clone-macro = "0.1.0"
colored = "2.1.0"
concurrent-queue = "2.3.0"
dashmap = { version = "5.5.3", features = ["serde"] }
dirs = "5.0.1"
earendil_crypt = { version = "0.5", path = "libraries/earendil_crypt" }
earendil_lownet = { version = "0.5", path = "libraries/earendil_lownet" }
earendil_packet = { version = "0.5", path = "libraries/earendil_packet" }
earendil_topology = { version = "0.5", path = "libraries/earendil_topology" }
either = "1.10.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-concurrency = "7.6.3"
futures-util = "0.3.28"
hex = "0.4.3"
indexmap = "1.9.3"
itertools = "0.11.0"
log = "0.4.20"
lru = "0.12.0"
moka = { version = "0.12.1", features = ["sync", "future"] }
moro = "0.4.0"
nanorpc = "0.1.12"
nanorpc-http = "0.1.5"
nursery_macro = { version = "0.1", path = "libraries/nursery_macro" }
once_cell = "1.18.0"
oneshot = "0.1.6"
parking_lot = "0.12.1"
picomux = "0.1.1"
priority-queue = "1.4.0"
rand = { version = "0.8.5", features = ["alloc"] }
replay_filter = "0.1.2"
scopeguard = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.3.0", features = ["hex", "base64"] }
serde_yaml = "0.9.25"
sillad = "0.1.1"
sillad-sosistab3 = "0.1.2"
smol = "1.3.0"
smol-timeout = "0.6.0"
smolscale = "0.4.3"
socksv5 = "0.3.1"
sosistab2-obfsudp = "0.1.11"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-async-std"] }
stdcode = "0.1.14"
tap = "1.0.1"
tempfile = "3.10.1"
thiserror = "1.0.49"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
virta = { version = "0.1", path = "libraries/virta" }

[profile.dev]
panic = 'abort'
opt-level = 1
lto = "off"

[profile.release]
panic = 'abort'

[profile.release-dbg]
inherits = "release"
debug = 2

[profile.bench]
inherits = "release"
debug = 2
