[package]
name = "earendil_crypt"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/mel-project/earendil"
license = "MPL-2.0"
description = "tbd"

[dependencies]
anyhow = "1.0.86"
arrayref = "0.3.7"
base32 = "0.4.0"
blake3 = "1.5.1"
bytes = "1.6.0"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
stdcode = "0.1.14"
thiserror = "1.0.61"
base64 = "0.21.7"
ed25519-consensus = "2.1.0"
argon2 = "0.5.3"
bytemuck = { version = "1.16.0", features = ["derive"] }
hex = "0.4.3"
