[package]
name = "earendil_lownet"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
async_stdcode={path="../async_stdcode"}
bytes = "1.10.1"
dashmap = "6.1.0"
earendil_crypt={path="../earendil_crypt"}
earendil_topology={path="../earendil_topology"}
futures-concurrency = "7.6.3"
futures-util = {version="0.3.31", features=["io"]}
haiyuu = {version="0.5", features=["smolscale"]}
rand = "0.9.1"
serde = {version="1.0.219", features=["derive"]}
sillad = "0.2.6"
async-channel = "2.3.1"
thiserror = "2.0.12"
tracing = "0.1.41"
serde_with = { version = "3.3.0", features = ["hex", "base64"] }
async-net = "2.0.0"
sillad-sosistab3 = "0.2.11"
picomux = "0.1.12"
clone-macro = "0.1.0"
oneshot = "0.1.11"
async-io = "2.4.0"
blake3 = "1.8.2"
nursery_macro = {path="../nursery_macro"}
async-task = "4.7.1"
smolscale = "0.4.15"
async-lock = "3.4.0"
derivative = "2.2.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
