[package]
name = "earendil_packet"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/mel-project/earendil"
license = "MPL-2.0"
description = "tbd"

[dependencies]
arrayref = "0.3.7"
blake3 = "1.5.1"
bytemuck = { version = "1.16.0", features = ["derive", "min_const_generics"] }
bytes = { version = "1.6.0", features = ["serde"] }
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
thiserror = "1.0.61"
serde = { version = "1.0.202", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.86"
bs58 = "0.5.1"
serde-big-array = "0.5.1"
earendil_crypt = { version = "0.1", path = "../earendil_crypt" }
base64 = "0.21.7"
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets"] }
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
