[package]
name = "earendil_topology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
earendil_packet={path="../earendil_packet"}
ed25519-compact = "2.0.4"
log = "0.4.18"
pod = "0.5.0"
serde = {version = "1.0.163", features=["derive"]}
slab = "0.4.8"
bytemuck = {version="1.13.1", features=["derive", "min_const_generics"]}
bytes = {version="1.4.0", features=["serde"]}
blake3 = "1.3.3"
stdcode = "0.1.14"
arrayref = "0.3.7"
rand = "0.8.5"
