[package]
name = "virta"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/mel-project/earendil"
license = "MPL-2.0"
description = "tbd"

[dependencies]
bytes = { version = "1.6.0", features = ["serde"] }
parking_lot = "0.12.1"
smol = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
recycle-box = "0.2.0"
ahash = "0.8.11"
clone-macro = "0.1.0"
stdcode = "0.1.14"
once_cell = "1.19.0"
async-event = "0.2"
log = "0.4.21"
