[package]
name = "earendil-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.25.0"
egui = "0.25.0"
tap = "1.0.1"
earendil={path="../../"}
nanorpc-http = "0.1.3"
poll-promise = "0.3.0"
anyctx = { git = "https://github.com/nullchinchilla/anyctx.git" }
serde_yaml = "0.9.30"
dirs = "5.0.1"
egui-modal = "0.3.2"
futures-util = "0.3.30"
smol = "2.0.0"
