[package]
name = "earendil-gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mel-project/earendil"
license = "MPL-2.0"
description = "Earendil GUI"
exclude = ["src/assets/big.ttf"]

[dependencies]
anyhow = "1.0.79"
eframe = "0.27"
egui = "0.27"
egui-modal = "0.3.6"
tap = "1.0.1"
earendil = { version = "0.4", path = "../../" }
nanorpc-http = "0.1.3"
poll-promise = "0.3.0"
anyctx = "0.1"
serde_yaml = "0.9.30"
dirs = "5.0.1"
futures-util = "0.3.30"
smol = "1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.111"
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.32"
earendil_crypt = { version = "0.1.0", path = "../../libraries/earendil_crypt" }
async-std = "1.12.0"
either = "1.10.0"
blake3 = "1.5.1"
