[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
earendil = {path="../../"}
earendil_crypt = {path="../../libraries/earendil_crypt/"}
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
serde_yaml = "0.9.27"
smolscale = "0.4.1"
