[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
earendil = {path="../../"}
earendil_crypt = {path="../../libraries/earendil_crypt/"}
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
scopeguard = "1.2.0"
serde_yaml = "0.9.27"
smol = "1.3.0"
smolscale = "0.4.1"
